# zebra-signal

./: .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
.github/workflows/: server.yml  web.yml
server/: Dockerfile  README.md
server/src/: main.rs  zebra_container.rs  zebra_session_manager.rs
server/src/generator/: counter.rs  linear_congruential_generator.rs  mod.rs
src/: main.rs  zebra_container.rs
web/: .gitmodules  Dockerfile  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
web/src/: App.ts  App.tsx  ContextProvider.tsx  main.ts  main.tsx
web/src/assets/: ArrowBackIcon.tsx  CheckIcon.tsx  ContentCopyIcon.tsx  ConversionPathIcon.tsx  DeleteForeverIcon.tsx  DeleteIcon.tsx  KeyboardArrowDownIcon.tsx  QrCode2Icon.tsx  QrCodeIcon.tsx  SendIcon.tsx  SettingsIcon.tsx  VisibilityIcon.tsx  ic_check.ts  ic_content_copy.ts
web/src/components/: ConnectToSessionComponent.tsx  CreateSessionComponent.tsx  HomeComponent.tsx  IceServersComponent.tsx  NavigationBar.tsx  PeerConnectionComponent.tsx  PeerConnectionConnectingComponent.tsx  PeerConnectionErrorComponent.tsx  ProgressBarComponent.tsx  QRCodeComponent.tsx  SessionComponent.tsx  SessionComponents.ts  SettingsComponent.tsx  Spacer.ts  Spacer.tsx
web/src/context/: useIceServers.tsx
web/src/hooks/: useCipher.ts  useIceServerForm.ts  useIceServers.tsx  useIndexedDB.ts  useSnackbar.tsx  useWebRTCDataChannel.ts  useWebRTCPeerConnection.ts  useWebSocket.ts  useZebraSession.ts  (+2 more)
(+35 files in other folders)
