[package]
name = "zebra-signal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.6", features = ["ws", "query"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40" }
tower-http = { version = "0.6.1", features = ["trace"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
futures = { version = "0.3.30" }
clap = { version = "4.5.18", features = ["derive"] }
